--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Fraunces:wght@700&display=swap');
 
+
+
 * {
   margin: 0;
   padding: 0;
@@ -88,7 +90,7 @@ body {
   display: flex;
 }
 
-.lesson_detail {
+.lesson_price {
   font-size: 25px;
   font-family: Fraunces;
   text-transform: uppercase;
@@ -99,9 +101,115 @@ color: hsl(158, 36%, 37%);
   align-items: center;
 }
 
-.lesson_detail > s {
+.lesson_price > s {
 font-size: 10px;
 font-family: Georgia, 'Times New Roman', Times, serif;
 color: #a2a2a2;
 text-transform: uppercase;
+}
+
+@media (max-width: 750px) {
+  body {
+    color: #444;
+    font-family: Roboto;
+    padding: 50px;
+    background: linear-gradient(to bottom right, hsl(30, 38%, 92%), hsl(0, 0%, 100%));
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+  }
+
+  .container {
+    max-width: 150px;
+    min-width: 300px;
+    border-radius: 4px;
+    overflow: hidden;
+    box-shadow: 0 30px 80px 10px rgba(0, 0, 0, 0.2);
+    display: grid;
+  }
+
+  .img_hero {
+    flex: 1;
+  }
+
+  .img_left {
+    width: 300px;
+    height: 300px;
+    display: block;
+    object-fit: cover;
+  }
+
+  .content {
+    flex: 1;
+    background: white;
+    padding: 10px 20px;
+    display: grid;
+    align-content: space-between
+  }
+
+  .lesson_title {
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
+    margin-top: 10px;
+  }
+
+
+  .button a {
+    display: block;
+    background: linear-gradient(to right, hsl(158, 36%, 37%), hsl(158, 38%, 31%) 80%);
+    color: white;
+    font-family: Montserrat;
+    font-size: 12px;
+    padding: 10px 10px;
+    border-radius: 5px;
+    text-align: center;
+    text-decoration: none;
+  }
+
+  .heading {
+    font-size: 19px;
+    margin-right: auto;
+    font-family: Fraunces;
+  }
+
+  .head_category {
+    color: #a2a2a2;
+    font-size: 10px;
+    margin-left: 0px;
+    letter-spacing: 0.5em;
+    font-family: Montserrat;
+  }
+
+  .lesson_description {
+    font-size: 12px;
+    font-family: Montserrat;
+    color: #a2a2a2;
+    margin-bottom: 10px;
+  }
+
+  .lesson_details {
+    display: flex;
+  }
+
+  .lesson_detail {
+    font-size: 18px;
+    font-family: Fraunces;
+    text-transform: uppercase;
+    margin-bottom: 10px;
+    margin-right: 20px;
+    font-weight: 700;
+    color: hsl(158, 36%, 37%);
+    display: flex;
+    align-items: center;
+  }
+
+  .lesson_detail>s {
+    font-size: 10px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    color: #a2a2a2;
+    text-transform: uppercase;
+  }
 }
